--- a/manifest.json
+++ b/manifest.json
@@ -1,45 +1,45 @@
 {
- "name": "Neurocrescer",
- "theme_color": "#009999",
- "description": "Veja por dentro",
- "display": "fullscreen",
- "background_color": "#009999",
  "icons": [
   {
-   "sizes": "150x150",
    "type": "image/png",
+   "sizes": "150x150",
    "src": "misc/icon150.png"
   },
   {
-   "sizes": "16x16",
    "type": "image/png",
+   "sizes": "16x16",
    "src": "misc/icon16.png"
   },
   {
-   "sizes": "180x180",
    "type": "image/png",
+   "sizes": "180x180",
    "src": "misc/icon180.png"
   },
   {
-   "sizes": "192x192",
    "type": "image/png",
+   "sizes": "192x192",
    "src": "misc/icon192.png"
   },
   {
-   "sizes": "32x32",
    "type": "image/png",
+   "sizes": "32x32",
    "src": "misc/icon32.png"
   },
   {
-   "sizes": "512x512",
    "type": "image/png",
+   "sizes": "512x512",
    "src": "misc/icon512.png"
   },
   {
-   "sizes": "64x64",
    "type": "image/png",
+   "sizes": "64x64",
    "src": "misc/icon64.png"
   }
  ],
- "start_url": "index.htm"
+ "start_url": "index.htm",
+ "name": "Neurocrescer",
+ "description": "Veja por dentro",
+ "display": "fullscreen",
+ "theme_color": "#009999",
+ "background_color": "#009999"
 }
